[package]
name = "karutin_proc_macro"
version = "0.1.0"

edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

# TODO: dependency versions
[dependencies]
syn = { version = "2.0.114", features = ["full", "visit", "visit-mut"] }
quote = "1.0.44"
proc-macro2 = "1.0.106"
prettyplease = "0.2.37"
